# de0

./: .gitignore  Cargo.toml  README.org
src/: main.rs
src/app/: app.rs  event_listener.rs  mod.rs  renderer.rs
src/ratatui/: event.rs  ui.rs
