[package]
name = "de0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.4", features = ["rwh_05"] }
vulkano = { version = "0.34.1" }
vulkano-shaders = { version = "0.34.0" }

[profile.dev]
opt-level = 1