[package]
name = "de0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
color-eyre = "0.6"

[profile.dev.package.backtrace]
opt-level = 3